--- a/class19_correlnet_R_template.ipynb
+++ b/class19_correlnet_R_template.ipynb
@@ -68,11 +68,7 @@
     }
    ],
    "source": [
-    "gene_matrix_for_network <- read.table(\"shared/bladder_cancer_genes_tcga.txt\",\n",
-    "                                     sep=\"\\t\",\n",
-    "                                     header=TRUE,\n",
-    "                                     row.names=1,\n",
-    "                                     stringsAsFactors=FALSE)\n",
+    "gene_matrix_for_network <- \n",
     "dim(gene_matrix_for_network)"
    ]
   },
@@ -105,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_matrix_for_network_cor <- cor(t(gene_matrix_for_network))"
+    "gene_matrix_for_network_cor <- "
    ]
   },
   {
@@ -136,9 +132,7 @@
    "execution_count": 28,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "diag(gene_matrix_for_network_cor) <- 0"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -168,9 +162,7 @@
    "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "gene_matrix_for_network_cor[upper.tri(gene_matrix_for_network_cor)] <- 0"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -185,8 +177,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inds_correl_above_thresh <- which(gene_matrix_for_network_cor >= 0.75)\n",
-    "cor_coeff_values_above_thresh <- gene_matrix_for_network_cor[inds_correl_above_thresh]"
+    "inds_correl_above_thresh <- \n",
+    "cor_coeff_values_above_thresh <- "
    ]
   },
   {
@@ -202,8 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "z_scores <- 0.5*log((1+gene_matrix_for_network_cor[inds_correl_above_thresh])/\n",
-    "                    (1-gene_matrix_for_network_cor[inds_correl_above_thresh]))"
+    "z_scores <- "
    ]
   },
   {
@@ -218,9 +209,7 @@
    "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "rm(gene_matrix_for_network_cor)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -236,7 +225,7 @@
    "outputs": [],
    "source": [
     "M <- ncol(gene_matrix_for_network)\n",
-    "P_values <- 2*(pnorm(-z_scores*sqrt(M-3)))"
+    "P_values <- "
    ]
   },
   {
@@ -268,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "P_values_adj <- p.adjust(P_values, method=\"hochberg\")"
+    "P_values_adj <- "
    ]
   },
   {
@@ -357,11 +346,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "suppressWarnings(\n",
-    "    plot(degree.distribution(final_network), log=\"xy\", xlab=\"k\", ylab=\"Pk\")\n",
-    ")"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -394,9 +379,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "power.law.fit(degree(final_network))$alpha"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -424,10 +407,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "inds_use = which(P_values_adj > 0)\n",
-    "plot(cor_coeff_values_above_thresh[inds_use], -log10(P_values_adj[inds_use]), xlab=\"R\", ylab=\"-log10(P)\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -453,12 +433,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "ts = cor_coeff_values_above_thresh * sqrt(M-2) / sqrt((1 - cor_coeff_values_above_thresh^2))\n",
-    "P_values_studentT = 2*pt(-ts, M-2)\n",
-    "inds_use = which(P_values > 0 & P_values_studentT > 0)\n",
-    "plot(-log10(P_values[inds_use]), -log10(P_values_studentT[inds_use]), xlab=\"Fisher transformation\", ylab=\"Student t\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
