--- a/class19_correlnet_python3_template.ipynb
+++ b/class19_correlnet_python3_template.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_matrix_for_network_df = pandas.read_csv(\"shared/bladder_cancer_genes_tcga.txt\", sep=\"\\t\")"
+    "gene_matrix_for_network_df = "
    ]
   },
   {
@@ -72,7 +72,7 @@
     }
    ],
    "source": [
-    "gene_matrix_for_network = gene_matrix_for_network_df.as_matrix()\n",
+    "gene_matrix_for_network = \n",
     "gene_matrix_for_network.shape"
    ]
   },
@@ -88,9 +88,7 @@
    "execution_count": 60,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "del gene_matrix_for_network_df"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -188,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_matrix_for_network_cor = numpy.corrcoef(gene_matrix_for_network)"
+    "gene_matrix_for_network_cor = "
    ]
   },
   {
@@ -323,7 +321,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "numpy.fill_diagonal(gene_matrix_for_network_cor, 0)"
+    "numpy.fill_diagonal( ## fill in here ## )"
    ]
   },
   {
@@ -1021,8 +1019,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inds_correl_above_thresh = numpy.where(gene_matrix_for_network_cor >= 0.75)\n",
-    "cor_coeff_values_above_thresh = gene_matrix_for_network_cor[inds_correl_above_thresh]"
+    "inds_correl_above_thresh = \n",
+    "cor_coeff_values_above_thresh = "
    ]
   },
   {
@@ -1038,8 +1036,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "z_scores = 0.5*numpy.log((1 + cor_coeff_values_above_thresh)/\n",
-    "                         (1 - cor_coeff_values_above_thresh))"
+    "z_scores = "
    ]
   },
   {
@@ -1054,9 +1051,7 @@
    "execution_count": 70,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "del gene_matrix_for_network_cor"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1072,7 +1067,7 @@
    "outputs": [],
    "source": [
     "M = gene_matrix_for_network.shape[1]\n",
-    "P_values = 2*scipy.stats.norm.cdf(-numpy.abs(z_scores)*math.sqrt(M-3))"
+    "P_values = "
    ]
   },
   {
@@ -1183,7 +1178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "row_col_inds_tuple_list = zip(inds_correl_above_thresh[0], inds_correl_above_thresh[1])\n",
+    "row_col_inds_tuple_list = \n",
     "\n",
     "## [note this can be done more elegantly using the unary \"*\" operator:\n",
     "##    row_col_inds_tuple_list = zip(*inds_correl_above_thresh)  \n",
@@ -1214,7 +1209,7 @@
     }
    ],
    "source": [
-    "final_network = igraph.Graph.TupleList(row_col_inds_tuple_list)\n",
+    "final_network = \n",
     "final_network.summary()"
    ]
   },
@@ -1242,16 +1237,7 @@
     }
    ],
    "source": [
-    "degree_dist = final_network.degree_distribution()\n",
-    "xs, ys = zip(*[(left, count) for left, _, count in degree_dist.bins()])\n",
-    "matplotlib.pyplot.scatter(xs, ys, marker=\"o\")\n",
-    "ax = matplotlib.pyplot.gca()\n",
-    "ax.set_yscale(\"log\")\n",
-    "ax.set_xscale(\"log\")\n",
-    "matplotlib.pyplot.ylim((0.5,1000))\n",
-    "pylab.xlabel(\"k\")\n",
-    "pylab.ylabel(\"N(k)\")\n",
-    "pylab.show()"
+    "degree_dist = "
    ]
   },
   {
@@ -1277,9 +1263,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "igraph.statistics.power_law_fit(final_network.degree()).alpha"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1305,13 +1289,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "inds_use = numpy.where(P_values_adj > 0)\n",
-    "matplotlib.pyplot.scatter(cor_coeff_values_above_thresh[inds_use], -numpy.log10(P_values_adj[inds_use]))\n",
-    "pylab.xlabel(\"R\")\n",
-    "pylab.ylabel(\"-log10(P)\")\n",
-    "pylab.show()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1337,16 +1315,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "ts = numpy.divide(cor_coeff_values_above_thresh * math.sqrt(M - 2), numpy.sqrt(1 - cor_coeff_values_above_thresh**2))\n",
-    "P_values_studentT = 2*scipy.stats.t.cdf(-ts, M-2)\n",
-    "inds_use = numpy.where(numpy.logical_and(P_values > 0, P_values_studentT > 0))\n",
-    "matplotlib.pyplot.scatter(-numpy.log10(P_values[inds_use]),\n",
-    "                          -numpy.log10(P_values_studentT[inds_use]))\n",
-    "pylab.xlabel(\"Fisher transform\")\n",
-    "pylab.ylabel(\"Student t\")\n",
-    "pylab.show()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
