--- a/class21_reveal_R_template.ipynb
+++ b/class21_reveal_R_template.ipynb
@@ -58,8 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mean_values <- apply(gene_matrix_filt, 1, mean)\n",
-    "gene_matrix_binarized <- (gene_matrix_filt > matrix(rep(mean_values, ncol(gene_matrix_filt)), ncol=ncol(gene_matrix_filt)))\n",
+    "mean_values <- \n",
+    "gene_matrix_binarized <- \n",
     "M <- ncol(gene_matrix_filt)"
    ]
   },
@@ -160,17 +160,17 @@
     "    n <- nrow(binary_vecs)\n",
     "    \n",
     "    ## convert the nxM matrix of logicals to a Mxn data frame of factors\n",
-    "    df <- data.frame(lapply(data.frame(t(binary_vecs)), factor))\n",
+    "    df <- \n",
     "    \n",
     "    ## use \"xtabs\" to tabulate the number of occurrences of each combination of logical\n",
     "    ## values for the n inputs; divide by M and call the resulting matrix \"probmat\"\n",
-    "    probmat <- xtabs(~., df)/M\n",
+    "    probmat <-\n",
     "\n",
     "    ## define a matrix \"hmat\" that is the negative of probmat element-wise-times log2 of probmat\n",
-    "    hmat <- -probmat*log2(probmat)\n",
+    "    hmat <- \n",
     "    \n",
     "    ## some entries of hmat will be NaN (do you know why?).  Set them to zero\n",
-    "    hmat[is.nan(hmat)] <- 0\n",
+    "   \n",
     "    \n",
     "    ## return the sum of entries of hmat\n",
     "    sum(hmat)\n",
