--- a/class21_reveal_python3_template.ipynb
+++ b/class21_reveal_python3_template.ipynb
@@ -53,8 +53,8 @@
     }
    ],
    "source": [
-    "gene_matrix_for_network_df = pandas.read_csv(\"shared/bladder_cancer_genes_tcga.txt\", sep=\"\\t\")\n",
-    "gene_matrix_for_network = gene_matrix_for_network_df.as_matrix()\n",
+    "gene_matrix_for_network_df = \n",
+    "gene_matrix_for_network = \n",
     "print(gene_matrix_for_network.shape)"
    ]
   },
@@ -71,8 +71,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genes_keep = numpy.where(numpy.median(gene_matrix_for_network, axis=1) > 14)\n",
-    "matrix_filt = gene_matrix_for_network[genes_keep, ][0]\n",
+    "\n",
+    "genes_keep = numpy.where( ## fill in here ##  > 14)\n",
+    "matrix_filt = \n",
     "matrix_filt.shape\n",
     "N = matrix_filt.shape[0]\n",
     "M = matrix_filt.shape[1]"
@@ -87,20 +88,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(13, 414)\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-2-4f4f27b9d8b4>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-4f4f27b9d8b4>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    gene_matrix_binarized = ## fill in here ##\u001b[0m\n\u001b[0m                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "gene_matrix_binarized = numpy.tile(numpy.mean(matrix_filt, axis=1),(M,1)).transpose() < matrix_filt\n",
-    "print(gene_matrix_binarized.shape)"
+    "gene_matrix_binarized = ## fill in here ##"
    ]
   },
   {
@@ -152,16 +155,17 @@
     "    [n, M] = binary_vecs.shape\n",
     "    \n",
     "    # make a \"M x n\" dataframe from the transpose of the matrix binary_vecs\n",
-    "    binary_df = pandas.DataFrame(binary_vecs.transpose())\n",
+    "    binary_df = \n",
     "    \n",
     "    # use the groupby method to obtain a data frame of counts of unique occurrences of the 2^n possible logical states\n",
-    "    binary_df_counts = binary_df.groupby(binary_df.columns.values.tolist()).size().values\n",
+    "    binary_df_counts = \n",
     "    \n",
     "    # divide the matrix of counts by M, to get a probability matrix\n",
-    "    probvec = binary_df_counts/M\n",
+    "    probvec = \n",
     "    \n",
     "    # compute the shannon entropy using the formula\n",
-    "    hvec = -probvec*numpy.log2(probvec)\n",
+    "    hvec = \n",
+    "    \n",
     "    return numpy.sum(hvec)"
    ]
   },
