--- a/class09_BFS_R_template.ipynb
+++ b/class09_BFS_R_template.ipynb
@@ -68,7 +68,7 @@
     "    # get the distance to cur_vertex_num, from the \"distances\" array\n",
     "    # get the neighbors of vertex cur_vertex_num in the graph, using the igraph \"neighbors\" func\n",
     "    # for each vertex_neighbor in the array vertex_neighbors\n",
-    "    #    if the distances[vertex_neighbor] is not NA:\n",
+    "    #    if the distances[vertex_neighbor] is NA:\n",
     "    #         (1) set the distance to vertex_neighbor (in \"distances\" vector) to the distance to\n",
     "    #           cur_vertex_num, plus one\n",
     "    #         (2) add neighbor to the queue\n",
