--- a/class12_pagerank_python3_template.ipynb
+++ b/class12_pagerank_python3_template.ipynb
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compute the pagerank centrality measures of all vertices, using `igraph.Graph.page_rank`.  Use the resulting object to initialize a `numpy.array`, `pageranks`."
+    "Compute the pagerank centrality measures of all vertices, using `igraph.Graph.pagerank`.  Use the resulting object to initialize a `numpy.array`, `pageranks`."
    ]
   },
   {
