--- a/class06_degdist_python3.ipynb
+++ b/class06_degdist_python3.ipynb
@@ -97,6 +97,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for rowtuple in interac_ppi.head().iterrows():\n",
+    "    row = rowtuple[1]\n",
+    "    rowid = rowtuple[0]\n",
+    "    print(rowid)\n",
+    "    if row['species1'] > row['species2']:\n",
+    "        interac_ppi['species1'][rowid] = row['species2'] \n",
+    "        interac_ppi['species2'][rowid] = row['species1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(interac_ppi.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
    "outputs": [],
