--- a/class10_closeness_python3.ipynb
+++ b/class10_closeness_python3.ipynb
@@ -271,6 +271,119 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's do it using a Pandas `DataFrame`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CC</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>protein</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>CYP26A1</th>\n",
+       "      <td>0.707169</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TCF3</th>\n",
+       "      <td>0.624891</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LEF1</th>\n",
+       "      <td>0.574036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MYC</th>\n",
+       "      <td>0.566006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MAZ</th>\n",
+       "      <td>0.561361</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FOXO4</th>\n",
+       "      <td>0.548439</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MAX</th>\n",
+       "      <td>0.544538</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PAX4</th>\n",
+       "      <td>0.536578</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SREBF1</th>\n",
+       "      <td>0.523398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PPARA</th>\n",
+       "      <td>0.523246</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               CC\n",
+       "protein          \n",
+       "CYP26A1  0.707169\n",
+       "TCF3     0.624891\n",
+       "LEF1     0.574036\n",
+       "MYC      0.566006\n",
+       "MAZ      0.561361\n",
+       "FOXO4    0.548439\n",
+       "MAX      0.544538\n",
+       "PAX4     0.536578\n",
+       "SREBF1   0.523398\n",
+       "PPARA    0.523246"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cc_df = pandas.DataFrame(list(zip(grn_igraph.vs[\"name\"], \n",
+    "                                  closeness_centralities.tolist())),\n",
+    "                        columns=[\"protein\",\"CC\"])\n",
+    "cc_df = cc_df.set_index(\"protein\")\n",
+    "cc_df.sort_values(\"CC\", ascending=False).head(n=10)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
