--- a/class12_pagerank_python3.ipynb
+++ b/class12_pagerank_python3.ipynb
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compute the pagerank centrality measures of all vertices, using `igraph.Graph.page_rank`.  Use the resulting object to initialize a `numpy.array`, `pageranks`."
+    "Compute the pagerank centrality measures of all vertices, using `igraph.Graph.pagerank`.  Use the resulting object to initialize a `numpy.array`, `pageranks`."
    ]
   },
   {
@@ -215,6 +215,8 @@
     "            \n",
     "    # use Equation on the board\n",
     "    pr = numpy.linalg.inv(numpy.diag([1.]*N) - alpha * M) * numpy.matrix([beta]*N).transpose()\n",
+    "    pr = pr/numpy.sum(pr)\n",
+    "    \n",
     "    return(pr.transpose())"
    ]
   },
