--- a/class18_motifs_R.ipynb
+++ b/class18_motifs_R.ipynb
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -756,9 +756,9 @@
        "<ol class=list-inline>\n",
        "\t<li>&lt;NA&gt;</li>\n",
        "\t<li>&lt;NA&gt;</li>\n",
-       "\t<li>6</li>\n",
+       "\t<li>4</li>\n",
        "\t<li>&lt;NA&gt;</li>\n",
-       "\t<li>2</li>\n",
+       "\t<li>4</li>\n",
        "\t<li>0</li>\n",
        "\t<li>0</li>\n",
        "\t<li>10</li>\n",
@@ -776,9 +776,9 @@
        "\\begin{enumerate*}\n",
        "\\item <NA>\n",
        "\\item <NA>\n",
-       "\\item 6\n",
+       "\\item 4\n",
        "\\item <NA>\n",
-       "\\item 2\n",
+       "\\item 4\n",
        "\\item 0\n",
        "\\item 0\n",
        "\\item 10\n",
@@ -795,9 +795,9 @@
       "text/markdown": [
        "1. &lt;NA&gt;\n",
        "2. &lt;NA&gt;\n",
-       "3. 6\n",
+       "3. 4\n",
        "4. &lt;NA&gt;\n",
-       "5. 2\n",
+       "5. 4\n",
        "6. 0\n",
        "7. 0\n",
        "8. 10\n",
@@ -813,7 +813,7 @@
        "\n"
       ],
       "text/plain": [
-       " [1] NA NA  6 NA  2  0  0 10  0  0  0  0  0  0  0  0"
+       " [1] NA NA  4 NA  4  0  0 10  0  0  0  0  0  0  0  0"
       ]
      },
      "metadata": {},
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -843,10 +843,10 @@
        "<thead><tr><th scope=col>X1</th><th scope=col>X2</th><th scope=col>X3</th><th scope=col>X4</th><th scope=col>X5</th><th scope=col>X6</th><th scope=col>X7</th><th scope=col>X8</th><th scope=col>freq</th></tr></thead>\n",
        "<tbody>\n",
        "\t<tr><td>0</td><td>0</td><td>1</td><td>2</td><td>0</td><td>1</td><td>1</td><td>1</td><td>1</td></tr>\n",
-       "\t<tr><td>0</td><td>0</td><td>1</td><td>3</td><td>0</td><td>1</td><td>1</td><td>2</td><td>3</td></tr>\n",
-       "\t<tr><td>0</td><td>0</td><td>2</td><td>2</td><td>0</td><td>1</td><td>1</td><td>2</td><td>1</td></tr>\n",
-       "\t<tr><td>0</td><td>0</td><td>2</td><td>3</td><td>0</td><td>1</td><td>2</td><td>2</td><td>4</td></tr>\n",
-       "\t<tr><td>0</td><td>1</td><td>1</td><td>3</td><td>0</td><td>1</td><td>2</td><td>2</td><td>2</td></tr>\n",
+       "\t<tr><td>0</td><td>0</td><td>1</td><td>3</td><td>0</td><td>1</td><td>1</td><td>2</td><td>2</td></tr>\n",
+       "\t<tr><td>0</td><td>0</td><td>2</td><td>3</td><td>0</td><td>1</td><td>2</td><td>2</td><td>1</td></tr>\n",
+       "\t<tr><td>0</td><td>1</td><td>1</td><td>2</td><td>0</td><td>1</td><td>1</td><td>2</td><td>2</td></tr>\n",
+       "\t<tr><td>0</td><td>1</td><td>1</td><td>3</td><td>0</td><td>1</td><td>2</td><td>2</td><td>5</td></tr>\n",
        "\t<tr><td>0</td><td>1</td><td>2</td><td>2</td><td>0</td><td>1</td><td>2</td><td>2</td><td>1</td></tr>\n",
        "\t<tr><td>0</td><td>1</td><td>2</td><td>3</td><td>0</td><td>1</td><td>2</td><td>3</td><td>3</td></tr>\n",
        "</tbody>\n",
@@ -857,10 +857,10 @@
        " X1 & X2 & X3 & X4 & X5 & X6 & X7 & X8 & freq\\\\\n",
        "\\hline\n",
        "\t 0 & 0 & 1 & 2 & 0 & 1 & 1 & 1 & 1\\\\\n",
-       "\t 0 & 0 & 1 & 3 & 0 & 1 & 1 & 2 & 3\\\\\n",
-       "\t 0 & 0 & 2 & 2 & 0 & 1 & 1 & 2 & 1\\\\\n",
-       "\t 0 & 0 & 2 & 3 & 0 & 1 & 2 & 2 & 4\\\\\n",
-       "\t 0 & 1 & 1 & 3 & 0 & 1 & 2 & 2 & 2\\\\\n",
+       "\t 0 & 0 & 1 & 3 & 0 & 1 & 1 & 2 & 2\\\\\n",
+       "\t 0 & 0 & 2 & 3 & 0 & 1 & 2 & 2 & 1\\\\\n",
+       "\t 0 & 1 & 1 & 2 & 0 & 1 & 1 & 2 & 2\\\\\n",
+       "\t 0 & 1 & 1 & 3 & 0 & 1 & 2 & 2 & 5\\\\\n",
        "\t 0 & 1 & 2 & 2 & 0 & 1 & 2 & 2 & 1\\\\\n",
        "\t 0 & 1 & 2 & 3 & 0 & 1 & 2 & 3 & 3\\\\\n",
        "\\end{tabular}\n"
@@ -870,10 +870,10 @@
        "X1 | X2 | X3 | X4 | X5 | X6 | X7 | X8 | freq | \n",
        "|---|---|---|---|---|---|---|\n",
        "| 0 | 0 | 1 | 2 | 0 | 1 | 1 | 1 | 1 | \n",
-       "| 0 | 0 | 1 | 3 | 0 | 1 | 1 | 2 | 3 | \n",
-       "| 0 | 0 | 2 | 2 | 0 | 1 | 1 | 2 | 1 | \n",
-       "| 0 | 0 | 2 | 3 | 0 | 1 | 2 | 2 | 4 | \n",
-       "| 0 | 1 | 1 | 3 | 0 | 1 | 2 | 2 | 2 | \n",
+       "| 0 | 0 | 1 | 3 | 0 | 1 | 1 | 2 | 2 | \n",
+       "| 0 | 0 | 2 | 3 | 0 | 1 | 2 | 2 | 1 | \n",
+       "| 0 | 1 | 1 | 2 | 0 | 1 | 1 | 2 | 2 | \n",
+       "| 0 | 1 | 1 | 3 | 0 | 1 | 2 | 2 | 5 | \n",
        "| 0 | 1 | 2 | 2 | 0 | 1 | 2 | 2 | 1 | \n",
        "| 0 | 1 | 2 | 3 | 0 | 1 | 2 | 3 | 3 | \n",
        "\n",
@@ -882,10 +882,10 @@
       "text/plain": [
        "  X1 X2 X3 X4 X5 X6 X7 X8 freq\n",
        "1 0  0  1  2  0  1  1  1  1   \n",
-       "2 0  0  1  3  0  1  1  2  3   \n",
-       "3 0  0  2  2  0  1  1  2  1   \n",
-       "4 0  0  2  3  0  1  2  2  4   \n",
-       "5 0  1  1  3  0  1  2  2  2   \n",
+       "2 0  0  1  3  0  1  1  2  2   \n",
+       "3 0  0  2  3  0  1  2  2  1   \n",
+       "4 0  1  1  2  0  1  1  2  2   \n",
+       "5 0  1  1  3  0  1  2  2  5   \n",
        "6 0  1  2  2  0  1  2  2  1   \n",
        "7 0  1  2  3  0  1  2  3  3   "
       ]
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -915,10 +915,11 @@
       "text/html": [
        "<ol class=list-inline>\n",
        "\t<li>1</li>\n",
-       "\t<li>3</li>\n",
-       "\t<li>1</li>\n",
-       "\t<li>4</li>\n",
        "\t<li>2</li>\n",
+       "\t<li>1</li>\n",
+       "\t<li>1</li>\n",
+       "\t<li>1</li>\n",
+       "\t<li>5</li>\n",
        "\t<li>1</li>\n",
        "\t<li>3</li>\n",
        "</ol>\n"
@@ -926,27 +927,29 @@
       "text/latex": [
        "\\begin{enumerate*}\n",
        "\\item 1\n",
-       "\\item 3\n",
-       "\\item 1\n",
-       "\\item 4\n",
        "\\item 2\n",
+       "\\item 1\n",
+       "\\item 1\n",
+       "\\item 1\n",
+       "\\item 5\n",
        "\\item 1\n",
        "\\item 3\n",
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
        "1. 1\n",
-       "2. 3\n",
+       "2. 2\n",
        "3. 1\n",
-       "4. 4\n",
-       "5. 2\n",
-       "6. 1\n",
-       "7. 3\n",
+       "4. 1\n",
+       "5. 1\n",
+       "6. 5\n",
+       "7. 1\n",
+       "8. 3\n",
        "\n",
        "\n"
       ],
       "text/plain": [
-       "[1] 1 3 1 4 2 1 3"
+       "[1] 1 2 1 1 1 5 1 3"
       ]
      },
      "metadata": {},
@@ -956,6 +959,15 @@
    "source": [
     "counts <- na.omit(motifs(G,4))\n",
     "counts[counts > 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "?motifs"
    ]
   },
   {
