--- a/class09_BFS_R.ipynb
+++ b/class09_BFS_R.ipynb
@@ -151,6 +151,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>1</td><td>0</td><td>1</td><td>1</td><td>2</td><td>1</td><td>1</td><td>1</td><td>2</td><td>1</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{llllllllll}\n",
+       "\t 1 & 0 & 1 & 1 & 2 & 1 & 1 & 1 & 2 & 1\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| 1 | 0 | 1 | 1 | 2 | 1 | 1 | 1 | 2 | 1 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10]\n",
+       "[1,] 1    0    1    1    2    1    1    1    2    1    "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "shortest.paths(g, v=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
