--- a/class29_FBA_R.ipynb
+++ b/class29_FBA_R.ipynb
@@ -18,10 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -54,10 +52,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -87,24 +83,15 @@
        "\\end{tabular}\n"
       ],
       "text/markdown": [
-       "1. -1000\n",
-       "2. -1000\n",
-       "3. -1000\n",
-       "4. -1000\n",
-       "5. -1000\n",
-       "6. -1000\n",
-       "7. 1000\n",
-       "8. 1000\n",
-       "9. 1000\n",
-       "10. 1000\n",
-       "11. 1000\n",
-       "12. 1000\n",
-       "13. 0\n",
-       "14. 0\n",
-       "15. 0\n",
-       "16. 0\n",
-       "17. 0\n",
-       "18. 0\n",
+       "\n",
+       "| <!--/--> | min | max | objective | \n",
+       "|---|---|---|---|---|---|\n",
+       "| ACALD | -1000 | 1000  | 0     | \n",
+       "| ACALDt | -1000 | 1000  | 0     | \n",
+       "| ACKr | -1000 | 1000  | 0     | \n",
+       "| ACONTa | -1000 | 1000  | 0     | \n",
+       "| ACONTb | -1000 | 1000  | 0     | \n",
+       "| ACt2r | -1000 | 1000  | 0     | \n",
        "\n",
        "\n"
       ],
@@ -145,10 +132,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -212,10 +197,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -305,7 +288,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.2.2"
+   "version": "3.4.1"
   }
  },
  "nbformat": 4,
